# go-bazel-playground

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
.github/actions/setup-target-determinator/: action.yaml
.github/workflows/: build.yaml  release-manually.yaml  release-periodically.yaml  release-when-pr-merged.yaml  release.yaml  weekly-tag.yaml
analyzers/sample/: BUILD.bazel
apps/fortune_cowsay/: BUILD.bazel
apps/greeter/cmd/greeter-client/: BUILD.bazel  main.go
apps/greeter/cmd/greeter-server/: BUILD.bazel  main.go
apps/greeter/server/: BUILD.bazel  greeter.go
apps/hello_world/: BUILD.bazel  main.go  os_windows.go
build_tools/apt/: bookworm.lock.json  bookworm.yaml
build_tools/integrations/: status.sh
build_tools/macros/: oci.bzl
build_tools/transitions/: multi_arch.bzl
doc/: 01-introduction.md  02-go-modules.md  03-internal-packages.md  04-unittest.md  05-lint.md  06-cross-compile.md  07-container-image.md  08-grpc-protobuf.md  09-editor-integration.md  10-versioning-artifacts.md  11-selective-release.md
internal/reverse/: BUILD.bazel  string_test.go
internal/windows/: BUILD.bazel
proto/hello/v1/: BUILD.bazel  _empty.go  greeter.proto  hello_request.proto  hello_response.proto
