load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sample",
    srcs = ["sample.go"],
    importpath = "github.com/pddg/go-bazel-playground/analyzers/sample",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/inspect",
        "@org_golang_x_tools//go/ast/inspector",
    ],
)
