load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//build_tools/macros:oci.bzl", "go_oci_image")

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_world_lib",
    srcs = [
        "main.go",
        "os_darwin.go",
        "os_linux.go",
        "os_windows.go",
    ],
    importpath = "github.com/pddg/go-bazel-playground/apps/hello_world",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/reverse",
        "@com_github_google_uuid//:uuid",
    ] + select({
        "@rules_go//go/platform:windows": [
            "//internal/windows",
        ],
        "//conditions:default": [],
    }),
)

go_oci_image(
    name = "image",
    srcs = [":hello_world"],
    annotations = {
        "org.opencontainers.image.source": "https://github.com/pddg/go-bazel-playground",
    },
    base = "@distroless_static_debian12",
    entrypoint = ["/hello_world"],
    repository = "ghcr.io/pddg/go-bazel-playground-hello-world",
)
