load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/pddg/go-bazel-playground/apps/greeter/cmd/greeter-client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/hello/v1:v1_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "greeter-client",
    embed = [":greeter-client_lib"],
    visibility = ["//visibility:public"],
)
