load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/pddg/go-bazel-playground/apps/greeter/cmd/greeter-server",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/greeter/server",
        "//proto/hello/v1:v1_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "greeter-server",
    embed = [":greeter-server_lib"],
    visibility = ["//visibility:public"],
)
